# python-grpc-template

./: .coveragerc  .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile.client  Dockerfile.server  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yaml
docker/v1/client/: Dockerfile
docker/v1/server/: Dockerfile
docs/: README.md
protobuf/: messenger.proto
protobuf/python_grpc_template/protobuf/: messenger.proto
python_grpc_boilerplate/: __init__.py  client.py  server.py
python_grpc_boilerplate/protobuf/: messenger_pb2.pyi  messenger_pb2_grpc.py  messenger_pb2_grpc.pyi
python_grpc_template/: __init__.py  client.py  server.py  types.py
python_grpc_template/protobuf/: messenger_pb2.py  messenger_pb2.pyi  messenger_pb2_grpc.py  messenger_pb2_grpc.pyi
scripts/: build_docker  docker-build-client.sh  docker-build-server.sh  docker-build.sh  docker-create-network.sh  docker-remove-network.sh  docker-run-client.sh  docker-run-server.sh  format.sh  generate-grpc-codes.sh  generate_grpc_codes  install.sh  lint.sh  test.sh
tests/: conftest.py  test_server.py  test_version.py
v1/: client.py  messenger_pb2.py  messenger_pb2_grpc.py  server.py
