[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[project]
name = "python_grpc_template"
authors = [{name = "Anthony Corletti", email = "python_grpc_template@example.com"}]
home-page = "https://www.github.com/anthcor/python-grpc-template"
dynamic = ["version", "description"]
requires-python = ">=3.9.6"
requires = [
    "grpcio-tools==1.42.0",
    "grpcio==1.42.0",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "coverage==6.1.1",
    "pytest-cov==3.0.0"
]
dev = [
    "mypy==0.910",
    "mypy-protobuf==3.0.0",
    "flake8==3.9.2",
    "black==21.10b0",
    "isort==5.9.3",
    "autoflake==1.4",
    "flake8-docstrings==1.6.0",
    "types-protobuf==3.18.1"
]

[tool.isort]
profile = "black"
